<resources>
    <string name="app_name">Radośnie Przemieniamy Świat</string>

    <!--    AddPostFragment-->
    <string name="add_post_fragment_post_description_hint">Opis</string>
    <string name="add_post_fragment_add_post">Dodaj</string>
    <string name="add_post_fragment_choose_image">Wybierz zdjęcie</string>
    <string name="add_post_fragment_no_image">Wybierz zdjęcie</string>
    <string name="add_post_fragment_no_image_and_description">Wybierz zdjęcie i wpisz opis</string>
    <string name="add_post_fragment_no_description">Opis nie może być pusty</string>
    <string name="add_post_fragment_success">Post został dodany</string>

    <!--    UserFragment-->
    <string name="user_fragment_empty_posts">W tym miejscu będą Twoje posty, kiedy ich dodasz</string>
    <string name="user_fragment_add_first_post">Dodaj pierwszy post</string>
    <string name="user_fragment_log_out">Wyloguj</string>

    <!--    EditPostFragment-->
    <string name="edit_post_fragment_edit">Edytuj</string>
    <string name="edit_post_fragment_success">Post został zedytowany</string>
    <string name="edit_post_fragment_removed">Post został usunięty</string>
    <string name="edit_post_fragment_remove">Usuń post</string>

    <!--    Post-->
    <string name="post_author_description">%1$s:     %2$s</string>

    <!--    LoginFragment-->
    <string name="login_username_hint">Login</string>
    <string name="login_password_hint">Hasło</string>
    <string name="login_password_login">Zaloguj</string>
    <string name="login_no_username">Wprowadź login</string>
    <string name="login_no_password">Wprowadź hasło</string>

    <!--    BottomMenu-->
    <string name="bottom_menu_home">Nowości</string>
    <string name="bottom_menu_news">Artykuły</string>
    <string name="bottom_menu_add_post">Dodaj post</string>
    <string name="bottom_menu_user">Ja</string>

    <!--    Default-->
    <string name="error">Pomyłka</string>

    <!--    No translate-->
    <string name="post_transition">post_transition</string>
</resources>