<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.wsiz.projekt_zespolowy.activity.login.LoginViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp">

            <include
                android:id="@+id/headerView"
                layout="@layout/header_item" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/viewCenterBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="headerView, glHorizontal50" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                cancelErrorEditText="@{loginView}"
                isErrorEnabled="@{viewModel.state == viewModel.state.NO_LOGIN || viewModel.state == viewModel.state.NO_LOGIN_AND_PASSWORD}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="vertical"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintTop_toBottomOf="@+id/viewCenterBarrier">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginView"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:enabled="@{viewModel.state != viewModel.State.LOADING}"
                    android:hint="@string/login_username_hint"
                    android:inputType="text"
                    android:nextFocusDown="@id/passwordView"
                    android:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    cancelErrorEditText="@{passwordView}"
                    isErrorEnabled="@{viewModel.state == viewModel.state.NO_PASSWORD || viewModel.state == viewModel.state.NO_LOGIN_AND_PASSWORD}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{viewModel.state != viewModel.State.LOADING}"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:textColor="@android:color/black" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="12dp"
                        android:enabled="@{viewModel.state != viewModel.State.LOADING}"
                        android:onClick="@{() -> viewModel.login(loginView.getText().toString(), passwordView.getText().toString())}"
                        android:paddingStart="48dp"
                        android:paddingEnd="48dp"
                        android:text="@string/login_password_login"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/viewCenterBarrier"
                        app:shapeAppearance="@style/ShapeAppearance.Button.CutCorners" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glHorizontal50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>