<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.wsiz.projekt_zespolowy.fragment.edit_post.EditPostViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:onClick="@{() -> viewModel.removePost()}"
                    android:text="@string/edit_post_fragment_remove"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageCardView"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:layout_margin="12dp"
                    android:layout_marginTop="48dp"
                    android:transitionName="postTransition"
                    app:cardCornerRadius="24dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="@{imageView.getDrawable() == null ? android.view.View.VISIBLE : android.view.View.GONE}" />

                    <ImageView
                        android:id="@+id/imageView"
                        imageURL="@{viewModel.post.imageURL}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    cancelErrorEditText="@{descriptionView}"
                    errorText="@{@string/add_post_fragment_no_description}"
                    isErrorEnabled="@{viewModel.state == viewModel.State.NO_DESCRIPTION}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="12dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:layout_constraintTop_toBottomOf="@id/imageCardView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:enabled="@{viewModel.state != viewModel.State.LOADING}"
                        android:hint="@string/add_post_fragment_post_description_hint"
                        android:maxLines="3"
                        android:text="@{viewModel.post.description}" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addPostView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:enabled="@{viewModel.state != viewModel.State.LOADING}"
                        android:onClick="@{() -> viewModel.editPost(descriptionView.getText().toString())}"
                        android:paddingStart="48dp"
                        android:paddingEnd="48dp"
                        android:text="@string/edit_post_fragment_edit"
                        app:shapeAppearance="@style/ShapeAppearance.Button.CutCorners" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glVertical30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glVertical70"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.7" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>